{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 29,
  "lineage": "ff92a352-05f5-f317-1ef2-7383417158c3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:loadbalancer/app/tf-lb-20260603040816172600000001/628e49e791b11879",
            "arn_suffix": "app/tf-lb-20260603040816172600000001/628e49e791b11879",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20260603040816172600000001-15653140.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:loadbalancer/app/tf-lb-20260603040816172600000001/628e49e791b11879",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20260603040816172600000001",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-03daf6c2069c53157"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a3e376adf098661f"
              },
              {
                "subnet_id": "subnet-0e83ef72f7c541eac"
              }
            ],
            "subnets": [
              "subnet-0a3e376adf098661f",
              "subnet-0e83ef72f7c541eac"
            ],
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "vpc_id": "vpc-0aafac5fc8deb72f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:loadbalancer/app/tf-lb-20260603040816172600000001/628e49e791b11879"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/0d31637800afbba0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/0d31637800afbba0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:loadbalancer/app/tf-lb-20260603040816172600000001/628e49e791b11879",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/0d31637800afbba0"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:534232119468:certificate/f44b5a66-53f1-4c71-90d8-d9e0ceb511d9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404 Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:loadbalancer/app/tf-lb-20260603040816172600000001/628e49e791b11879",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener-rule/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699/fe774dc9b865b1d2",
            "condition": [
              {
                "host_header": [
                  {
                    "regex_values": [],
                    "values": [
                      "bagisto.infrasky.online"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener-rule/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699/fe774dc9b865b1d2",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699",
            "priority": 100,
            "region": "ap-southeast-1",
            "tags": {},
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:listener-rule/app/tf-lb-20260603040816172600000001/628e49e791b11879/e9a29a68193f4699/fe774dc9b865b1d2"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849",
            "arn_suffix": "targetgroup/bagisto-tg/692d115f1be53849",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:loadbalancer/app/tf-lb-20260603040816172600000001/628e49e791b11879"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bagisto-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "bagisto"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bagisto",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849,i-0f71e2d5bf27ec5ed,80",
            "port": 80,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849",
            "target_id": "i-0f71e2d5bf27ec5ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "port": 80,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:534232119468:targetgroup/bagisto-tg/692d115f1be53849",
            "target_id": "i-0f71e2d5bf27ec5ed"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.ec2.aws_instance.this",
            "module.ec2.aws_security_group.instance_sg",
            "module.ec2.data.aws_ami.this",
            "module.iam.aws_iam_instance_profile.ec2_ssm",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:security-group/sg-03daf6c2069c53157",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03daf6c2069c53157",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bagisto-alb-sg",
            "name_prefix": "",
            "owner_id": "534232119468",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bagisto"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bagisto",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "sg-03daf6c2069c53157",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:security-group/sg-0fee48636ae1812ec",
            "description": "Allow MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fee48636ae1812ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bagisto-db-sg",
            "name_prefix": "",
            "owner_id": "534232119468",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bagisto"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bagisto",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "sg-0fee48636ae1812ec",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00c0f88081b60ba84",
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:instance/i-0f71e2d5bf27ec5ed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bagisto-ec2-instance_profile_name",
            "id": "i-0f71e2d5bf27ec5ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02cdf999c7a64aeb5"
              }
            ],
            "primary_network_interface_id": "eni-02cdf999c7a64aeb5",
            "private_dns": "ip-10-0-1-176.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_ip": "47.129.242.175",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:534232119468:key/b47ffabd-2221-49ec-8065-0ab90726bd80",
                "tags_all": {
                  "environment": "prod",
                  "managed_by": "terraform",
                  "project": "prod"
                },
                "throughput": 125,
                "volume_id": "vol-041eb986ecce57777",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3e376adf098661f",
            "tags": {
              "Name": "bagisto"
            },
            "tags_all": {
              "Name": "bagisto",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e843666071caec0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "i-0f71e2d5bf27ec5ed",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.instance_sg",
            "module.ec2.data.aws_ami.this",
            "module.iam.aws_iam_instance_profile.ec2_ssm",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.data.aws_iam_policy_document.assume_role_policy",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:security-group/sg-09e843666071caec0",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e843666071caec0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bagisto-instance-sg",
            "name_prefix": "",
            "owner_id": "534232119468",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "bagisto"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bagisto",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "sg-09e843666071caec0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:internet-gateway/igw-0ec9ba531da7d3b40",
            "id": "igw-0ec9ba531da7d3b40",
            "owner_id": "534232119468",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Bagisto-Internet-Gateway"
            },
            "tags_all": {
              "Name": "Bagisto-Internet-Gateway",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "igw-0ec9ba531da7d3b40",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:route-table/rtb-06f703c7d28d9b4f4",
            "id": "rtb-06f703c7d28d9b4f4",
            "owner_id": "534232119468",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec9ba531da7d3b40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Bagisto-Public-Route-Table"
            },
            "tags_all": {
              "Name": "Bagisto-Public-Route-Table",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "rtb-06f703c7d28d9b4f4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-01-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072a084a5f25ed5d3",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-06f703c7d28d9b4f4",
            "subnet_id": "subnet-0a3e376adf098661f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "rtbassoc-072a084a5f25ed5d3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-01",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-02-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b5b2ea3b8d1375f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-06f703c7d28d9b4f4",
            "subnet_id": "subnet-0e83ef72f7c541eac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "rtbassoc-07b5b2ea3b8d1375f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.Bagisto-Public-Subnet-02",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bagisto-Private-Subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:subnet/subnet-0b7df0c7dd56a7b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7df0c7dd56a7b88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534232119468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Bagisto-Private-Subnet-01"
            },
            "tags_all": {
              "Name": "Bagisto-Private-Subnet-01",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "subnet-0b7df0c7dd56a7b88",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bagisto-Private-Subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:subnet/subnet-0b7f04977f5a81bea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7f04977f5a81bea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534232119468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Bagisto-Private-Subnet-02"
            },
            "tags_all": {
              "Name": "Bagisto-Private-Subnet-02",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "subnet-0b7f04977f5a81bea",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bagisto-Public-Subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:subnet/subnet-0a3e376adf098661f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3e376adf098661f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534232119468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Bagisto-Public-Subnet-01"
            },
            "tags_all": {
              "Name": "Bagisto-Public-Subnet-01",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "subnet-0a3e376adf098661f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bagisto-Public-Subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:subnet/subnet-0e83ef72f7c541eac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e83ef72f7c541eac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534232119468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Bagisto-Public-Subnet-02"
            },
            "tags_all": {
              "Name": "Bagisto-Public-Subnet-02",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            },
            "vpc_id": "vpc-0aafac5fc8deb72f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "subnet-0e83ef72f7c541eac",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:534232119468:vpc/vpc-0aafac5fc8deb72f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d7d73010c4fbf7d",
            "default_route_table_id": "rtb-08ea860ce99d9b177",
            "default_security_group_id": "sg-09e0ac712f9d2b74f",
            "dhcp_options_id": "dopt-056bea0b8c55fe60f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aafac5fc8deb72f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ea860ce99d9b177",
            "owner_id": "534232119468",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Bagisto-VPC"
            },
            "tags_all": {
              "Name": "Bagisto-VPC",
              "environment": "prod",
              "managed_by": "terraform",
              "project": "prod"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "534232119468",
            "id": "vpc-0aafac5fc8deb72f5",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}